--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "yfm-poc",
+  "name": "yfm-docs",
   "author": "Yandex Data UI Team <data-ui@yandex-team.ru>",
   "description": "",
   "license": "UNLICENSED",
   "version": "0.0.0-alpha.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.yandex-team.ru/data-ui/yfm-docs"
+  },
   "bin": "build/index.js",
   "files": [
     "build",
