Build as React application

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "@yandex-data-ui/tsconfig/tsconfig",
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "es2019",
     "moduleResolution": "node",
     "declaration": true,
     "outDir": "build",
@@ -20,5 +20,5 @@
   ],
   "types": [
     "node"
-  ],
+  ]
 }
