--- a/package.json
+++ b/package.json
@@ -42,15 +42,17 @@
     "@yandex-data-ui/tsconfig": "^0.4.0",
     "babel-loader": "^8.1.0",
     "bem-cn-lite": "^3.0.0",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "file-loader": "^5.1.0",
-    "isomorphic-style-loader": "^5.1.0",
     "lego-on-react": "^3.26.7",
     "lodash": "^4.17.15",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "raw-loader": "^4.0.0",
     "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
     "svg-sprite-loader": "^4.2.1",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.2",
