--- a/package.json
+++ b/package.json
@@ -19,46 +19,43 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
+    "chalk": "^4.0.0",
     "js-yaml": "^3.13.1",
+    "markdown-it": "^10.0.0",
+    "markdown-it-imsize": "^2.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "shelljs": "^0.8.3",
     "walk-sync": "^2.1.0",
     "yargs": "^15.3.1",
-    "yfm-transform": "^2.13.1"
+    "yfm-transform": "^3.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
+    "@babel/preset-typescript": "^7.9.0",
+    "@types/chalk": "^2.2.0",
     "@types/js-yaml": "^3.12.3",
+    "@types/markdown-it": "^10.0.0",
     "@types/node": "^12.12.31",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@types/shelljs": "^0.8.7",
     "@types/yargs": "^15.0.4",
-    "@yandex-data-ui/cloud-components": "^4.22.0",
-    "@yandex-data-ui/common": "^5.30.0",
-    "@yandex-data-ui/i18n": "^0.12.0",
-    "@yandex-data-ui/tsconfig": "^0.4.0",
     "babel-loader": "^8.1.0",
     "bem-cn-lite": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
-    "file-loader": "^5.1.0",
-    "lego-on-react": "^3.26.7",
     "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
-    "raw-loader": "^4.0.0",
+    "react-svg-loader": "^3.0.3",
+    "node-sass": "^4.14.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
-    "svg-sprite-loader": "^4.2.1",
-    "ts-loader": "^6.2.1",
     "typescript": "^3.7.2",
-    "url-loader": "^3.0.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
   }
