--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "shelljs": "^0.8.3",
     "walk-sync": "^2.1.0",
     "yargs": "^15.3.1",
+    "yfm-docs-components": "0.0.0-alpha.4",
     "yfm-transform": "^3.0.2"
   },
   "devDependencies": {
@@ -46,29 +47,29 @@
     "@types/react-dom": "^16.9.5",
     "@types/shelljs": "^0.8.7",
     "@types/yargs": "^15.0.4",
+    "@typescript-eslint/eslint-plugin": "^2.27.0",
+    "@typescript-eslint/parser": "^2.29.0",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "bem-cn-lite": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
-    "lodash": "^4.17.15",
-    "mini-css-extract-plugin": "^0.9.0",
-    "prop-types": "^15.7.2",
-    "react-svg-loader": "^3.0.3",
-    "node-sass": "^4.14.0",
-    "sass-loader": "^8.0.2",
-    "style-loader": "^1.1.3",
-    "typescript": "^3.7.2",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
     "eslint-plugin-security": "^1.4.0",
-    "@typescript-eslint/eslint-plugin": "^2.27.0",
-    "@typescript-eslint/parser": "^2.29.0",
-    "babel-eslint": "^10.1.0",
+    "husky": "^4.2.5",
     "lint-staged": "^10.1.7",
-    "husky": "^4.2.5"
+    "lodash": "^4.17.15",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.14.0",
+    "prop-types": "^15.7.2",
+    "react-svg-loader": "^3.0.3",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
+    "typescript": "^3.7.2",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
   },
   "husky": {
     "hooks": {
