--- a/src/app/.eslintrc
+++ b/src/app/.eslintrc
@@ -1,12 +1,12 @@
 {
-    "extends": ["eslint:recommended"],
+    "extends": ["eslint:recommended", "plugin:react/recommended"],
     "parser": "babel-eslint",
     "parserOptions": {
         "ecmaVersion": 2019
     },
     "env": {
         "es6": true,
-        "shared-node-browser": true
+        "browser": true
     },
     "rules": {
         "no-empty": 0,
@@ -190,5 +190,10 @@
                 }
             }]
         }
-    }]
+    }],
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    }
 }
