--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "shelljs": "^0.8.3",
     "walk-sync": "^2.1.0",
     "yargs": "^15.3.1",
-    "yfm-docs-components": "0.0.0-alpha.4",
+    "yfm-docs-components": "0.0.1",
     "yfm-transform": "^3.0.2"
   },
   "devDependencies": {
