--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "prepublishOnly": "npm run lint && npm run build"
   },
   "dependencies": {
+    "@doc-tools/components": "0.0.4",
+    "@doc-tools/transform": "^0.0.12",
     "chalk": "^4.0.0",
     "js-yaml": "^3.13.1",
     "markdown-it": "^10.0.0",
@@ -30,9 +32,7 @@
     "react-dom": "^16.13.1",
     "shelljs": "^0.8.3",
     "walk-sync": "^2.1.0",
-    "yargs": "^15.3.1",
-    "@doc-tools/components": "^0.0.3",
-    "@doc-tools/transform": "^0.0.12"
+    "yargs": "^15.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
