--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
   "dependencies": {
     "@doc-tools/components": "^1.4.0",
     "@doc-tools/transform": "^1.4.10",
+    "aws-sdk": "^2.773.0",
     "chalk": "^4.0.0",
     "js-yaml": "^3.13.1",
     "markdown-it": "^10.0.0",
     "markdown-it-imsize": "^2.0.1",
+    "mime-types": "^2.1.27",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "shelljs": "^0.8.3",
@@ -45,6 +47,7 @@
     "@types/chalk": "^2.2.0",
     "@types/js-yaml": "^3.12.3",
     "@types/markdown-it": "^10.0.0",
+    "@types/mime-types": "^2.1.0",
     "@types/node": "^12.12.31",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
