--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   "dependencies": {
     "@doc-tools/components": "^1.5.3",
     "@doc-tools/transform": "^1.5.1",
+    "@octokit/core": "^3.3.0",
     "aws-sdk": "^2.773.0",
     "chalk": "^4.0.0",
+    "dotenv": "^8.2.0",
     "js-yaml": "^4.0.0",
     "markdown-it": "^10.0.0",
     "markdown-it-imsize": "^2.0.1",
@@ -35,18 +37,22 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "shelljs": "^0.8.3",
+    "simple-git": "^2.37.0",
     "walk-sync": "^2.1.0",
     "yargs": "^15.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@babel/plugin-syntax-top-level-await": "^7.12.13",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.9.0",
-    "@babel/preset-react": "^7.9.4",
+    "@babel/plugin-transform-runtime": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
+    "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.9.0",
+    "@babel/runtime": "^7.13.10",
     "@types/chalk": "^2.2.0",
-    "@types/lodash": "^4.14.167",
     "@types/js-yaml": "^4.0.0",
+    "@types/lodash": "^4.14.167",
     "@types/markdown-it": "^10.0.0",
     "@types/mime-types": "^2.1.0",
     "@types/node": "^12.12.31",
@@ -73,7 +79,7 @@
     "react-svg-loader": "^3.0.3",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
-    "typescript": "^3.7.2",
+    "typescript": "^3.9.2",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
   },
