comments were fixed

--- a/.babelrc
+++ b/.babelrc
@@ -4,5 +4,9 @@
         "@babel/react",
         "@babel/typescript"
     ],
-    "plugins": ["@babel/plugin-proposal-class-properties"]
+    "plugins": [
+        "@babel/plugin-proposal-class-properties",
+        "@babel/plugin-transform-runtime",
+        "@babel/plugin-syntax-top-level-await"
+    ]
 }
