--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 build
 input
 output
+output-html
+!test/**/input
 
 # libraries
 npm-debug.log
@@ -10,6 +12,7 @@ node_modules
 .vscode
 .idea
 
+coverage
 .env
 .tvm.json
 .DS_Store
