--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "start": "node build/index.js",
     "lint": "eslint \"./**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "npm run lint -- --fix",
-    "prepublishOnly": "npm run lint && npm run build"
+    "prepublishOnly": "npm run lint && npm run build",
+    "test": "jest --coverage"
   },
   "dependencies": {
     "@doc-tools/components": "^1.5.3",
@@ -43,8 +44,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "@babel/plugin-syntax-top-level-await": "^7.12.13",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-syntax-top-level-await": "^7.12.13",
     "@babel/plugin-transform-runtime": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-react": "^7.12.13",
@@ -71,6 +72,7 @@
     "eslint-plugin-react-hooks": "^3.0.0",
     "eslint-plugin-security": "^1.4.0",
     "husky": "^4.2.5",
+    "jest": "^26.6.3",
     "lint-staged": "^10.1.7",
     "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.9.0",
@@ -90,6 +92,8 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
+      "npm run build",
+      "npm run test",
       "eslint --fix",
       "git add"
     ]
