--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "lint": "eslint \"./**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "npm run lint -- --fix",
     "prepublishOnly": "npm run lint && npm run build",
-    "test": "jest --coverage"
+    "test": "npm run build && jest"
   },
   "dependencies": {
     "@doc-tools/components": "^1.5.3",
-    "@doc-tools/transform": "^2.0.0",
+    "@doc-tools/transform": "^2.0.0-beta.0",
     "@octokit/core": "^3.3.0",
     "aws-sdk": "^2.773.0",
     "chalk": "^4.0.0",
@@ -52,6 +52,7 @@
     "@babel/preset-typescript": "^7.9.0",
     "@babel/runtime": "^7.13.10",
     "@types/chalk": "^2.2.0",
+    "@types/jest": "^27.0.1",
     "@types/js-yaml": "^4.0.0",
     "@types/lodash": "^4.14.167",
     "@types/markdown-it": "^10.0.0",
@@ -72,7 +73,7 @@
     "eslint-plugin-react-hooks": "^3.0.0",
     "eslint-plugin-security": "^1.4.0",
     "husky": "^4.2.5",
-    "jest": "^26.6.3",
+    "jest": "^27.1.0",
     "lint-staged": "^10.1.7",
     "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.9.0",
@@ -81,6 +82,7 @@
     "react-svg-loader": "^3.0.3",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
+    "ts-jest": "^27.0.5",
     "typescript": "^3.9.2",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
@@ -92,7 +94,6 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "npm run build",
       "npm run test",
       "eslint --fix",
       "git add"
