--- a/tests/mocks/single-page/test1/expected-output/toc.yaml
+++ b/tests/mocks/single-page/test1/expected-output/toc.yaml
@@ -2,6 +2,8 @@ title: Single page
 items:
   - name: First
     href: index.md
-
   - name: Second
     href: second.md
+  - name: Third
+    href: pages/third.md
+base: .
