DOCSTOOLS-764: allow to render custom head content for local version
It can be used to provide css styles for custom plugins

--- a/package.json
+++ b/package.json
@@ -101,7 +101,8 @@
   "pkg": {
     "scripts": [
       "build/index.js",
-      "build/plugins/*.js"
+      "build/plugins/*.js",
+      "build/head-content.js"
     ],
     "assets": "build/app.js"
   },
