--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "js-yaml": "^4.0.0",
     "markdown-it": "^10.0.0",
     "markdown-it-imsize": "^2.0.1",
-    "mime-types": "^2.1.27",
+    "mime": "^2.5.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "shelljs": "^0.8.4",
@@ -56,7 +56,7 @@
     "@types/js-yaml": "^4.0.0",
     "@types/lodash": "^4.14.167",
     "@types/markdown-it": "^10.0.0",
-    "@types/mime-types": "^2.1.0",
+    "@types/mime": "^2.0.3",
     "@types/node": "^12.12.31",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
