DOCSTOOLS-842: support nested includes for inline include syntax

--- a/tests/mocks/include-toc/test2/expected-output/toc.yaml
+++ b/tests/mocks/include-toc/test2/expected-output/toc.yaml
@@ -2,9 +2,11 @@ items:
   - name: Name1
     href: file1.md
   - name: NameA
-    href: folder/fileA.md
+    href: fileA.md
   - name: NameB
-    href: folder/fileB.md
+    href: fileB.md
+  - name: NameC
+    href: fileC.md
   - name: NameX
     href: fileX.md
 base: .
