--- a/tests/mocks/include-toc/test2/input/toc.yaml
+++ b/tests/mocks/include-toc/test2/input/toc.yaml
@@ -1,6 +1,6 @@
 items:
   - name: Name1
     href: file1.md
-  - include: { mode: link, path: folder/toc.yaml }
+  - include: { path: folder/toc.yaml }
   - name: NameX
     href: fileX.md
