--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@types/shelljs": "^0.8.7",
-    "@types/yaml-front-matter": "^4.1.0",
     "@types/yargs": "^15.0.4",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.29.0",
@@ -86,8 +85,7 @@
     "ts-jest": "^27.0.5",
     "typescript": "^3.9.2",
     "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
-    "yaml-front-matter": "^4.1.1"
+    "webpack-cli": "^3.3.11"
   },
   "husky": {
     "hooks": {
