--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
     "eslint-plugin-security": "^1.4.0",
+    "husky": "^4.3.8",
     "jest": "^27.2.3",
     "lint-staged": "^10.1.7",
     "lodash": "^4.17.15",
@@ -85,6 +86,11 @@
     "typescript": "^3.9.2",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
