--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,16 +8,21 @@ on:
 
 jobs:
   build:
-    runs-on: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        node-version: [10.x, 12.x, 14.x]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js ${{ matrix.node-version }} ${{matrix.os}}
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+          os: ${{ matrix.os }}
           cache: 'npm'
       - name: Install Packages
         run: npm ci
-      - name: Tests
+      - name: Run tests
         run: npm run test
