--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,19 +4,21 @@ on:
   push:
     branches: [master]
   pull_request:
-    branches: [master]
+    branches: ['**']
 
 jobs:
-  build:
+  test:
+    name: Node v${{ matrix.node-version }} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        node-version: [10.x, 12.x, 14.x]
+        os: [ubuntu-latest]
+        node-version: [10.x]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Use Node.js ${{matrix.os}} ${{ matrix.node-version }}
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
@@ -24,7 +26,13 @@ jobs:
           cache: 'npm'
       - name: Install packages for project
         run: npm ci
+      - run: npm run build
       - name: Install packages for tests
-        run: cd tests & npm ci
+        run: |
+          cd tests
+          npm ci
+          npm i -g jest
       - name: Run tests
-        run: npm run build & cd tests & npm run test
+        run: |
+          cd tests
+          npm run test
