--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        node-version: [14.x]
+        node-version: [14.x, 16.x]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
