--- a/package.json
+++ b/package.json
@@ -21,12 +21,11 @@
     "start": "node build/index.js",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "npm run lint -- --fix",
-    "prepublishOnly": "npm run lint && npm run build",
-    "test": "npm run build && jest"
+    "prepublishOnly": "npm run lint && npm run build"
   },
   "dependencies": {
     "@doc-tools/components": "^1.10.1",
-    "@doc-tools/transform": "^2.4.1",
+    "@doc-tools/transform": "^2.4.7",
     "@octokit/core": "^3.3.0",
     "aws-sdk": "^2.773.0",
     "chalk": "^4.0.0",
@@ -52,7 +51,6 @@
     "@babel/preset-typescript": "^7.9.0",
     "@babel/runtime": "^7.13.10",
     "@types/chalk": "^2.2.0",
-    "@types/jest": "^27.0.1",
     "@types/js-yaml": "^4.0.0",
     "@types/lodash": "^4.14.167",
     "@types/markdown-it": "^10.0.0",
@@ -73,7 +71,6 @@
     "eslint-plugin-react-hooks": "^3.0.0",
     "eslint-plugin-security": "^1.4.0",
     "husky": "^4.3.8",
-    "jest": "^27.2.3",
     "lint-staged": "^10.1.7",
     "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.9.0",
@@ -82,7 +79,7 @@
     "react-svg-loader": "^3.0.3",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
-    "ts-jest": "^27.0.5",
+    "ts-jest": "^27.1.2",
     "typescript": "^3.9.2",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
