--- a/package.json
+++ b/package.json
@@ -24,65 +24,65 @@
     "prepublishOnly": "npm run lint && npm run build"
   },
   "dependencies": {
-    "@doc-tools/components": "^1.11.1",
-    "@doc-tools/transform": "^2.5.9",
-    "@octokit/core": "^3.5.1",
-    "aws-sdk": "^2.1054.0",
-    "chalk": "^4.0.0",
-    "highlight.js": "^10.4.0",
-    "js-yaml": "^4.1.0",
-    "mime-types": "^2.1.34",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "shelljs": "^0.8.5",
-    "simple-git": "^2.48.0",
-    "threads": "^1.7.0",
-    "threads-plugin": "^1.4.0",
-    "walk-sync": "^2.1.0",
-    "yargs": "^15.3.1"
+    "@doc-tools/components": "2.0.0",
+    "@doc-tools/transform": "2.5.9",
+    "@octokit/core": "3.5.1",
+    "aws-sdk": "2.1054.0",
+    "chalk": "4.1.2",
+    "highlight.js": "10.7.3",
+    "js-yaml": "4.1.0",
+    "mime-types": "2.1.34",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
+    "shelljs": "0.8.5",
+    "simple-git": "2.48.0",
+    "threads": "1.7.0",
+    "threads-plugin": "1.4.0",
+    "walk-sync": "2.2.0",
+    "yargs": "15.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.7",
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-syntax-top-level-await": "^7.14.5",
-    "@babel/plugin-transform-runtime": "^7.16.8",
-    "@babel/preset-env": "^7.16.8",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.7",
-    "@babel/runtime": "^7.16.7",
-    "@types/chalk": "^2.2.0",
-    "@types/js-yaml": "^4.0.5",
-    "@types/lodash": "^4.14.178",
-    "@types/markdown-it": "^10.0.0",
-    "@types/mime-types": "^2.1.1",
-    "@types/node": "^12.12.31",
-    "@types/react": "^16.9.23",
-    "@types/react-dom": "^16.9.5",
-    "@types/shelljs": "^0.8.10",
-    "@types/yargs": "^15.0.4",
-    "@typescript-eslint/eslint-plugin": "^2.27.0",
-    "@typescript-eslint/parser": "^2.29.0",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.3",
-    "bem-cn-lite": "^3.0.0",
-    "css-loader": "^3.4.2",
-    "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^3.0.0",
-    "eslint-plugin-security": "^1.4.0",
-    "husky": "^4.3.8",
-    "lint-staged": "^10.1.7",
-    "lodash": "^4.17.21",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.14.0",
-    "prop-types": "^15.8.1",
-    "react-svg-loader": "^3.0.3",
-    "sass-loader": "^8.0.2",
-    "style-loader": "^1.1.3",
-    "ts-jest": "^27.1.2",
-    "typescript": "^3.9.2",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "@babel/core": "7.16.7",
+    "@babel/plugin-proposal-class-properties": "7.16.7",
+    "@babel/plugin-syntax-top-level-await": "7.14.5",
+    "@babel/plugin-transform-runtime": "7.16.8",
+    "@babel/preset-env": "7.16.8",
+    "@babel/preset-react": "7.16.7",
+    "@babel/preset-typescript": "7.16.7",
+    "@babel/runtime": "7.16.7",
+    "@types/chalk": "2.2.0",
+    "@types/js-yaml": "4.0.5",
+    "@types/lodash": "4.14.178",
+    "@types/markdown-it": "10.0.3",
+    "@types/mime-types": "2.1.1",
+    "@types/node": "12.20.41",
+    "@types/react": "16.14.21",
+    "@types/react-dom": "16.9.14",
+    "@types/shelljs": "0.8.10",
+    "@types/yargs": "15.0.14",
+    "@typescript-eslint/eslint-plugin": "2.34.0",
+    "@typescript-eslint/parser": "2.34.0",
+    "babel-eslint": "10.1.0",
+    "babel-loader": "8.2.3",
+    "bem-cn-lite": "3.0.0",
+    "css-loader": "3.6.0",
+    "eslint": "6.8.0",
+    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-react-hooks": "3.0.0",
+    "eslint-plugin-security": "1.4.0",
+    "husky": "4.3.8",
+    "lint-staged": "10.5.4",
+    "lodash": "4.17.21",
+    "mini-css-extract-plugin": "0.9.0",
+    "node-sass": "4.14.1",
+    "prop-types": "15.8.1",
+    "react-svg-loader": "3.0.3",
+    "sass-loader": "8.0.2",
+    "style-loader": "1.3.0",
+    "ts-jest": "27.1.2",
+    "typescript": "3.9.10",
+    "webpack": "4.46.0",
+    "webpack-cli": "3.3.12"
   },
   "husky": {
     "hooks": {
