--- a/.github/workflows/bundle-stats-action 10_13.yml
+++ b/.github/workflows/bundle-stats-action 10_13.yml
@@ -16,10 +16,20 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 16.x]
+        node-version: [14.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: npm ci
+    - run: npm run build
+    - run: npx webpack --mode production --json static/webpack-stats.json
+    
     - name: Run bundle-stats
       uses: vio/bundle-stats-action@v1
       with:
