--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "src"
   ],
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --config ./webpack.config.js",
     "start": "node build/index.js",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "npm run lint -- --fix",
     "prepublishOnly": "npm run lint && npm run build",
-    "test": "npm run build && jest"
+    "test": "npm run build && jest --coverage"
   },
   "dependencies": {
     "@doc-tools/components": "^1.10.1",
