--- a/.github/workflows/slack-notification.yml
+++ b/.github/workflows/slack-notification.yml
@@ -1,9 +1,9 @@
 name: Slack Notification
 
 on:
-  # push:
-  #   branches:
-  #     - development
+  push:
+    branches:
+      - development
   workflow_call:
     inputs:
       message:
