--- a/.github/workflows/diff.yml
+++ b/.github/workflows/diff.yml
@@ -11,11 +11,25 @@ on:
 
 jobs:
 
+  slackNotification:
+    name: Slack Notification
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Slack Notification
+      uses: rtCamp/action-slack-notify@v2
+      env:
+        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_PERFORMANCE }}
+        SLACK_CHANNEL: performance
+        SLACK_COLOR: ${{ job.status }} # or a specific color like 'good' or '#ff00ff'
+        SLACK_MESSAGE: '111111111111111'
+        SLACK_TITLE: Message
+
   slack-notification:
     name: Slack Notification
     uses: ./.github/workflows/slack-notification.yml
     with:
-      message: '123' #${{steps.get-diff.outputs.base_file_string}}
+      message: 'dif 123' #${{steps.get-diff.outputs.base_file_string}}
     secrets:
       slack_webhook: ${{ secrets.SLACK_WEBHOOK_PERFORMANCE }}
   
