--- a/.github/workflows/slack-notification.yml
+++ b/.github/workflows/slack-notification.yml
@@ -2,8 +2,7 @@ name: Slack Notification
 
 on:
   push:
-    branches:
-      - development
+    branches: ['master']
   workflow_call:
     inputs:
       message:
