--- a/.github/workflows/slack-notification.yml
+++ b/.github/workflows/slack-notification.yml
@@ -14,7 +14,7 @@ on:
         required: true
 
 jobs:
-  slackNotification:
+  if_merged:
     if: github.event.pull_request.merged == 'true'
     name: Slack Notification
     runs-on: ubuntu-latest
