--- a/.github/workflows/slack-notification.yml
+++ b/.github/workflows/slack-notification.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches: [ master ]
   workflow_call:
+    push:
+      branches: [ master ]
     inputs:
       message:
         required: true
