--- a/.github/workflows/diff.yml
+++ b/.github/workflows/diff.yml
@@ -5,6 +5,8 @@ env:
   ANALYZE_BUNDLE: 'TRUE'
 
 on:
+  push:
+    branches: [ master ]
   workflow_dispatch:
   pull_request:
     types: [opened, edited, synchronize, reopened, ready_for_review]
