refactor(cmd/xliff): logging, glob file collection
log info and errors, use glob to collect files

--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@doc-tools/transform": "^2.8.2",
     "@doc-tools/yfm2xliff": "0.0.3",
     "@octokit/core": "3.5.1",
+    "@types/glob": "^8.0.0",
     "ajv": "^8.11.0",
     "aws-sdk": "2.1054.0",
     "chalk": "4.1.2",
+    "glob": "^8.0.3",
     "highlight.js": "10.7.3",
     "js-yaml": "4.1.0",
     "mime-types": "2.1.34",
