feat: limit async operations to avoid heap out of memory

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@octokit/core": "3.5.1",
     "@types/glob": "^8.0.0",
     "ajv": "^8.11.0",
+    "async": "^3.2.4",
     "aws-sdk": "2.1054.0",
     "chalk": "4.1.2",
     "glob": "^8.0.3",
@@ -57,6 +58,7 @@
     "@babel/preset-react": "7.16.7",
     "@babel/preset-typescript": "7.16.7",
     "@babel/runtime": "7.16.7",
+    "@types/async": "^3.2.15",
     "@types/chalk": "2.2.0",
     "@types/js-yaml": "4.0.5",
     "@types/lodash": "4.14.178",
