feat(cmd/translate): translate documentation

--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "@doc-tools/yfm2xliff": "0.0.3",
     "@octokit/core": "3.5.1",
     "@types/glob": "^8.0.0",
+    "@yandex-cloud/nodejs-sdk": "^2.2.2",
     "ajv": "^8.11.0",
     "async": "^3.2.4",
     "aws-sdk": "2.1054.0",
     "chalk": "4.1.2",
+    "fast-xml-parser": "^4.0.11",
     "glob": "^8.0.3",
     "highlight.js": "10.7.3",
     "js-yaml": "4.1.0",
@@ -94,6 +96,7 @@
     "ts-jest": "27.1.2",
     "typescript": "3.9.10",
     "webpack": "4.46.0",
+    "webpack-bundle-analyzer": "^4.6.1",
     "webpack-cli": "3.3.12"
   },
   "husky": {
