--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "js-yaml": "4.1.0",
     "mime-types": "2.1.34",
     "node-html-parser": "^5.3.3",
+    "puppeteer-chromium-resolver": "^19.1.0",
+    "puppeteer-core": "^17.1.3",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "shelljs": "0.8.5",
@@ -91,6 +93,7 @@
     "mini-css-extract-plugin": "0.9.0",
     "node-sass": "4.14.1",
     "prop-types": "15.8.1",
+    "raw-loader": "^4.0.2",
     "react-svg-loader": "3.0.3",
     "sass-loader": "8.0.2",
     "style-loader": "1.3.0",
