--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "dependencies": {
     "@apidevtools/swagger-parser": "^10.1.0",
     "@doc-tools/components": "^2.4.0",
-    "@doc-tools/transform": "^2.14.2",
+    "@doc-tools/transform": "^2.16.0-beta.0",
     "@doc-tools/yfm2xliff": "0.0.3",
     "@octokit/core": "3.5.1",
     "@types/glob": "^8.0.0",
