--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "scripts": {
     "build": "webpack",
     "start": "node build/index.js",
+    "start-ts": "ts-node src/index.ts",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "npm run lint -- --fix",
     "prepublishOnly": "npm run lint && npm run build"
@@ -98,7 +99,8 @@
     "typescript": "3.9.10",
     "webpack": "4.46.0",
     "webpack-bundle-analyzer": "^4.6.1",
-    "webpack-cli": "3.3.12"
+    "webpack-cli": "3.3.12",
+    "ts-node": "^10.9.1"
   },
   "husky": {
     "hooks": {
