--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@doc-tools/yfm2xliff": "0.0.3",
     "@octokit/core": "3.5.1",
     "@types/glob": "^8.0.0",
+    "@types/json-stringify-safe": "^5.0.0",
     "@yandex-cloud/nodejs-sdk": "^2.2.2",
     "ajv": "^8.11.0",
     "async": "^3.2.4",
@@ -43,6 +44,7 @@
     "glob": "^8.0.3",
     "highlight.js": "10.7.3",
     "js-yaml": "4.1.0",
+    "json-stringify-safe": "^5.0.1",
     "mime-types": "2.1.34",
     "node-html-parser": "^5.3.3",
     "react": "16.14.0",
