--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "shelljs": "0.8.5",
     "simple-git": "2.48.0",
     "slugify": "^1.6.5",
+    "tar-stream": "^2.2.0",
     "threads": "1.7.0",
     "threads-plugin": "1.4.0",
     "walk-sync": "2.2.0",
@@ -77,6 +78,7 @@
     "@types/react": "16.14.21",
     "@types/react-dom": "16.9.14",
     "@types/shelljs": "0.8.10",
+    "@types/tar-stream": "^2.2.2",
     "@types/yargs": "15.0.14",
     "@typescript-eslint/eslint-plugin": "2.34.0",
     "@typescript-eslint/parser": "2.34.0",
@@ -98,11 +100,11 @@
     "sass-loader": "8.0.2",
     "style-loader": "1.3.0",
     "ts-jest": "27.1.2",
+    "ts-node": "^10.9.1",
     "typescript": "3.9.10",
     "webpack": "4.46.0",
     "webpack-bundle-analyzer": "^4.6.1",
-    "webpack-cli": "3.3.12",
-    "ts-node": "^10.9.1"
+    "webpack-cli": "3.3.12"
   },
   "husky": {
     "hooks": {
