--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "async": "^3.2.4",
     "aws-sdk": "2.1054.0",
     "chalk": "4.1.2",
+    "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
     "fast-xml-parser": "^4.0.11",
     "glob": "^8.0.3",
     "highlight.js": "^11.7.0",
     "http-status-codes": "^2.2.0",
+    "html-escaper": "^3.0.3",
     "js-yaml": "4.1.0",
     "json-stringify-safe": "^5.0.1",
     "mime-types": "2.1.34",
@@ -71,6 +73,7 @@
     "@babel/runtime": "7.16.7",
     "@types/async": "^3.2.15",
     "@types/chalk": "2.2.0",
+    "@types/html-escaper": "^3.0.0",
     "@types/js-yaml": "4.0.5",
     "@types/lodash": "4.14.178",
     "@types/markdown-it": "10.0.3",
@@ -101,11 +104,11 @@
     "sass-loader": "8.0.2",
     "style-loader": "1.3.0",
     "ts-jest": "27.1.2",
+    "ts-node": "^10.9.1",
     "typescript": "3.9.10",
     "webpack": "4.46.0",
     "webpack-bundle-analyzer": "^4.6.1",
-    "webpack-cli": "3.3.12",
-    "ts-node": "^10.9.1"
+    "webpack-cli": "3.3.12"
   },
   "husky": {
     "hooks": {
