--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "fast-xml-parser": "^4.0.11",
     "glob": "^8.0.3",
     "highlight.js": "^11.7.0",
+    "http-status-codes": "^2.2.0",
     "js-yaml": "4.1.0",
     "json-stringify-safe": "^5.0.1",
     "mime-types": "2.1.34",
