--- a/package.json
+++ b/package.json
@@ -41,13 +41,12 @@
     "async": "^3.2.4",
     "aws-sdk": "2.1054.0",
     "chalk": "4.1.2",
-    "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
     "fast-xml-parser": "^4.0.11",
     "glob": "^8.0.3",
     "highlight.js": "^11.7.0",
-    "http-status-codes": "^2.2.0",
     "html-escaper": "^3.0.3",
+    "http-status-codes": "^2.2.0",
     "js-yaml": "4.1.0",
     "json-stringify-safe": "^5.0.1",
     "mime-types": "2.1.34",
@@ -89,7 +88,7 @@
     "@typescript-eslint/parser": "2.34.0",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.3",
-    "bem-cn-lite": "3.0.0",
+    "bem-cn-lite": "^3.0.0",
     "css-loader": "3.6.0",
     "eslint": "6.8.0",
     "eslint-plugin-react": "7.28.0",
