--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "src"
   ],
   "scripts": {
-    "build": "webpack",
+    "build": "npm run build:app && npm run build:bin",
+    "build:app": "webpack",
+    "build:bin": "./esbuild.sh",
     "start": "node build/index.js",
     "start-ts": "ts-node src/index.ts",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
@@ -90,6 +92,7 @@
     "babel-loader": "8.2.3",
     "bem-cn-lite": "^3.0.0",
     "css-loader": "3.6.0",
+    "esbuild": "^0.17.17",
     "eslint": "6.8.0",
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-react-hooks": "3.0.0",
