--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
   },
   "dependencies": {
     "@apidevtools/swagger-parser": "^10.1.0",
+    "@diplodoc/mermaid-extension": "0.0.2",
     "@doc-tools/components": "^2.7.2",
-    "@doc-tools/transform": "^2.16.4",
+    "@doc-tools/transform": "^2.18.2",
     "@doc-tools/yfm2xliff": "0.0.5",
     "@gravity-ui/uikit": "^4.3.0",
     "@octokit/core": "3.5.1",
