--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "start-ts": "ts-node src/index.ts",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "npm run lint -- --fix",
-    "prepublishOnly": "npm run lint && npm run build"
+    "prepublishOnly": "npm run lint && npm run build",
+    "typecheck": "tsc --noEmit"
   },
   "engines": {
     "node": "14.*"
