--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "src"
   ],
   "scripts": {
-    "build": "npm run build:app && npm run build:cli",
-    "build:app": "webpack",
-    "build:cli": "node scripts/build.cli.js",
+    "build": "node scripts/build.cli.js",
     "start": "node build/index.js",
     "start-ts": "ts-node src/index.ts",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
@@ -31,13 +29,12 @@
   },
   "dependencies": {
     "@apidevtools/swagger-parser": "^10.1.0",
+    "@diplodoc/client": "0.0.6",
     "@diplodoc/markdown-translation": "^0.3.0",
     "@diplodoc/mermaid-extension": "0.0.2",
     "@diplodoc/openapi-extension": "1.2.3",
-    "@doc-tools/components": "^2.7.2",
     "@doc-tools/transform": "^3.0.2",
     "@doc-tools/yfm2xliff": "0.0.5",
-    "@gravity-ui/uikit": "^4.3.0",
     "@octokit/core": "4.2.1",
     "@types/glob": "^8.0.0",
     "@types/json-stringify-safe": "^5.0.0",
@@ -45,6 +42,7 @@
     "ajv": "^8.11.0",
     "async": "^3.2.4",
     "aws-sdk": "2.1388.0",
+    "bem-cn-lite": "^4.1.0",
     "chalk": "4.1.2",
     "dotenv": "^16.0.3",
     "fast-xml-parser": "^4.0.11",
@@ -56,8 +54,6 @@
     "json-stringify-safe": "^5.0.1",
     "mime-types": "2.1.35",
     "node-html-parser": "^6.1.5",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
     "shelljs": "0.8.5",
     "simple-git": "3.19.0",
     "slugify": "^1.6.5",
@@ -68,14 +64,6 @@
     "yargs": "15.4.1"
   },
   "devDependencies": {
-    "@babel/core": "7.22.1",
-    "@babel/plugin-proposal-class-properties": "7.16.7",
-    "@babel/plugin-syntax-top-level-await": "7.14.5",
-    "@babel/plugin-transform-runtime": "7.22.4",
-    "@babel/preset-env": "7.22.4",
-    "@babel/preset-react": "7.16.7",
-    "@babel/preset-typescript": "7.21.5",
-    "@babel/runtime": "7.16.7",
     "@types/async": "^3.2.15",
     "@types/chalk": "2.2.0",
     "@types/html-escaper": "^3.0.0",
@@ -84,37 +72,21 @@
     "@types/markdown-it": "10.0.3",
     "@types/mime-types": "2.1.1",
     "@types/node": "14.*",
-    "@types/react": "16.14.21",
-    "@types/react-dom": "16.9.14",
     "@types/shelljs": "0.8.12",
     "@types/tar-stream": "^2.2.2",
     "@types/yargs": "15.0.14",
     "@typescript-eslint/eslint-plugin": "2.34.0",
     "@typescript-eslint/parser": "2.34.0",
     "babel-eslint": "10.1.0",
-    "babel-loader": "8.2.3",
-    "bem-cn-lite": "^3.0.0",
-    "css-loader": "3.6.0",
     "esbuild": "^0.17.17",
     "eslint": "6.8.0",
-    "eslint-plugin-react": "7.28.0",
-    "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-security": "1.7.1",
     "husky": "8.0.3",
     "lint-staged": "10.5.4",
     "lodash": "4.17.21",
-    "mini-css-extract-plugin": "1.6.2",
-    "node-sass": "4.14.1",
-    "prop-types": "15.8.1",
-    "react-svg-loader": "3.0.3",
-    "sass-loader": "8.0.2",
-    "style-loader": "1.3.0",
     "ts-jest": "27.1.2",
     "ts-node": "^10.9.1",
-    "typescript": "4.9.5",
-    "webpack": "4.46.0",
-    "webpack-bundle-analyzer": "^4.6.1",
-    "webpack-cli": "3.3.12"
+    "typescript": "4.9.5"
   },
   "husky": {
     "hooks": {
