--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "dependencies": {
     "@apidevtools/swagger-parser": "^10.1.0",
-    "@diplodoc/markdown-translation": "0.0.3",
+    "@diplodoc/markdown-translation": "^0.1.0",
     "@diplodoc/mermaid-extension": "0.0.2",
     "@doc-tools/components": "^2.7.2",
     "@doc-tools/transform": "^3.0.2",
