--- a/babel.config.json
+++ b/babel.config.json
@@ -1,9 +1,5 @@
 {
-    "presets": [
-        "@babel/env",
-        "@babel/react",
-        "@babel/typescript"
-    ],
+    "presets": [["@babel/env", { "modules": "cjs", "targets": { "node": true }}], "@babel/react", "@babel/typescript"],
     "plugins": [
         "@babel/plugin-proposal-class-properties",
         "@babel/plugin-transform-runtime",
