--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@diplodoc/client": "0.0.6",
     "@diplodoc/markdown-translation": "^0.5.0",
     "@diplodoc/mermaid-extension": "0.0.2",
-    "@diplodoc/openapi-extension": "1.2.4",
+    "@diplodoc/openapi-extension": "^1.2.5",
     "@doc-tools/transform": "^3.0.2",
     "@doc-tools/yfm2xliff": "0.0.5",
     "@octokit/core": "4.2.1",
