--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "json-stringify-safe": "^5.0.1",
     "mime-types": "2.1.35",
     "node-html-parser": "^6.1.5",
+    "p-map": "^4.0.0",
     "shelljs": "0.8.5",
     "simple-git": "3.19.0",
     "slugify": "^1.6.5",
@@ -71,6 +72,7 @@
     "@types/lodash": "4.14.195",
     "@types/mime-types": "2.1.1",
     "@types/node": "14.*",
+    "@types/p-map": "^2.0.0",
     "@types/shelljs": "0.8.12",
     "@types/tar-stream": "^2.2.2",
     "@types/yargs": "17.0.24",
