--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,7 @@
 {
+  "extends": "@diplodoc/tsconfig",
   "compilerOptions": {
-    "module": "esnext",
-    "esModuleInterop": true,
-    "pretty": true,
-    "newLine": "lf",
-    "stripInternal": true,
-    "strict": true,
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    "noEmitOnError": true,
-    "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true,
-    "experimentalDecorators": true,
-    "allowJs": true,
     "target": "es6",
-    "moduleResolution": "node",
-    "declaration": false,
     "outDir": "build",
     "jsx": "react",
     "baseUrl": ".",
