fix: install babel core

--- a/package.json
+++ b/package.json
@@ -65,8 +65,10 @@
     "yargs": "17.7.2"
   },
   "devDependencies": {
-    "@diplodoc/eslint-config": "^1.0.0",
-    "@diplodoc/tsconfig": "^1.0.1",
+    "@babel/core": "^7.23.2",
+    "@babel/eslint-parser": "^7.22.15",
+    "@diplodoc/eslint-config": "^1.0.3",
+    "@diplodoc/tsconfig": "^1.0.2",
     "@types/async": "^3.2.15",
     "@types/chalk": "2.2.0",
     "@types/html-escaper": "^3.0.0",
@@ -79,7 +81,6 @@
     "@types/yargs": "17.0.24",
     "@typescript-eslint/eslint-plugin": "2.34.0",
     "@typescript-eslint/parser": "2.34.0",
-    "babel-eslint": "10.1.0",
     "esbuild": "^0.17.17",
     "eslint": "6.8.0",
     "eslint-plugin-security": "1.7.1",
