infra(dependabot): use appropriate reviewers group

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,5 +10,5 @@ updates:
     schedule:
       interval: "daily"
     reviewers:
-      - "yandex-cloud/yfm"
+      - "diplodoc-platform/devops"
     open-pull-requests-limit: 5
